Make Nazarov changes

--- a/Dissertation/Work_structured/Dissertation/conclusion.tex
+++ b/Dissertation/Work_structured/Dissertation/conclusion.tex
@@ -13,8 +13,8 @@
         \item Доказана марковость случайной последовательности, включающей длину низкоприоритетной очереди. Проведена классификация состояний цепи по арифметическим свойствам переходных вероятностей этой последовательности. А также найдены достаточное и необходимое условия существования стационарного распределения.
         \item Проведен аналогичный анализ для случайной последовательности, включающей очереди первичных требований: доказана ее марковость, проведена классификация состояний и найдено достаточное условие существования стационарного распределения.
         \item Найдено условие ограниченности для последовательности математических ожиданий $    \{( E\varkappa_{4,i}); i \geqslant 0\}$.
-        \item Разработана имитационная модель для изучения исходной системы и написана программа ее реализующая.
-        \item На основе имитационной модели были подтверждены и расширены результаты, полученные теоретически.
+%        \item Разработана имитационная модель для изучения исходной системы и написана программа ее реализующая.
+        \item На основе имитационной модели расширены результаты, полученные теоретически.
     \end{enumerate}
 
 
