--- a/Dissertation/Work_structured/Dissertation/part2.tex
+++ b/Dissertation/Work_structured/Dissertation/part2.tex
@@ -1,13 +1,13 @@
-\chapter{Анализ кибернетической системы как стохастической последовательности}						% Заголовок
+\chapter{Анализ управляющей системы Ляпунова--Яблонского как стохастической последовательности}						% Заголовок
 % \addcontentsline{toc}{chapter}{Анализ кибернетической системы как стохастической последовательности}	% Добавляем его в оглавление
 % \setcounter{chapter}{2}
 % \setcounter{section}{0}
 
-Исследуемая в работе кибернетическая система характеризуется следующими объектами:  обслуживающее устройство и четыре очереди. Последовательность 
+Исследуемая в работе управляющая система характеризуется следующими объектами:  обслуживающее устройство и четыре очереди. Последовательность 
  $\{(\Gamma_i,  \varkappa_{1, i},  \varkappa_{2, i},  \varkappa_{3, i},   \varkappa_{4, i}); i \geqslant 0\}$ служит математическим описанием этих объектов. Глава~2 посвящена тем результатам,  которые удается получить для этой пятимерной последовательности,  несмотря на ее сложность: доказана марковость этой последовательности,  а также проведена классификация ее состояний по арифметическим свойствам переходных вероятностей. Эти результаты позволят далее в работе доказать марковость и провести классификацию состояний для последовательностей,  содержащих только часть из упомянутых пяти компонент.
 
-\section[Марковское свойство кибернетической системы]%
-{Марковское свойство кибернетической системы}
+\section[Марковское свойство управляющей системы]%
+{Марковское свойство управляющей системы}
 Пусть $a$,  $b$,  $x^i \in \mathbb{Z}_+^4$,  $k_i=\overline{0;d}$,  $r_i=\overline{1;n_{k_i}}$,  $i=0$,  $1$,  $\ldots$. Введем следующие события:
 \begin{equation}
 A_i(k_i;r_i;x^i) = \{\omega\colon\Gamma_i=\Gamma^{(k_i, r_i)},  \varkappa_i=x^i\},  \quad  B_i(a;b) = \{\omega\colon\eta_i=a,  \xi_i=b\}, 
@@ -121,7 +121,7 @@ $$
 {\mathbb A}_{\mathrm{trans}}^1(x,  \tilde{x},  \tilde{k},  \tilde{r}) &= \{(a_1,  a_2) \in \mathbb{Z}_+^2 \colon \tilde{x}_1=\max{\{0,  x_1+a_1-\ell(\tilde{k},  \tilde{r},  1)\}}\},  \\
 {\mathbb A}_{\mathrm{trans}}^2(x,  \tilde{x},  \tilde{k},  \tilde{r}) &= \{(a_1,  a_2) \in \mathbb{Z}_+^2 \colon  \tilde{x}_2=\max{\{0,  x_2+a_2-\ell(\tilde{k},  \tilde{r},  2)\}}\}.\label{A:trans:2}
 \end{align}
-Множества ${\mathbb A}_{\mathrm{trans}}^0(x,  \tilde{x},  \tilde{k},  \tilde{r})$,   ${\mathbb A}_{\mathrm{trans}}^1(x,  \tilde{x},  \tilde{k},  \tilde{r})$ и ${\mathbb A}_{\mathrm{trans}}^2(x,  \tilde{x},  \tilde{k},  \tilde{r})$ состоят из тех пар $(a_1,  a_2)$ количеств требований в очередях $O_1$ и $O_2$,   которые могут иметь место в нашей кибернетической системе в соответствии с уравнениями \eqref{gammaFunc},   \eqref{queuesFunc},   \eqref{FourthFunc},   \eqref{ProbablititiesToProve}. А именно,   содержательный смысл множества  ${\mathbb A}_{\mathrm{trans}}^0(x,  \tilde{x},  \tilde{k},  \tilde{r})$ состоит в том,   что оно учитывает количество требований в очереди $O_4$ на текущем и следующем тактах: $x_4$ и $\tilde{x}_4$,~--- а также учитывает знание количества требований,  находившихся и пришедших в очередь $O_1$. Множество ${\mathbb A}_{\mathrm{trans}}^1(x,  \tilde{x},  \tilde{k},  \tilde{r})$ учитывает изменение количества требований в очереди $O_1$: $x_1$ и $\tilde{x}_1$. И наконец,   множество 
+Множества ${\mathbb A}_{\mathrm{trans}}^0(x,  \tilde{x},  \tilde{k},  \tilde{r})$,   ${\mathbb A}_{\mathrm{trans}}^1(x,  \tilde{x},  \tilde{k},  \tilde{r})$ и ${\mathbb A}_{\mathrm{trans}}^2(x,  \tilde{x},  \tilde{k},  \tilde{r})$ состоят из тех пар $(a_1,  a_2)$ количеств требований в очередях $O_1$ и $O_2$,   которые могут иметь место в нашей абстрактной управляющей системе Ляпунова--Яблонского в соответствии с уравнениями \eqref{gammaFunc},   \eqref{queuesFunc},   \eqref{FourthFunc},   \eqref{ProbablititiesToProve}. А именно,   содержательный смысл множества  ${\mathbb A}_{\mathrm{trans}}^0(x,  \tilde{x},  \tilde{k},  \tilde{r})$ состоит в том,   что оно учитывает количество требований в очереди $O_4$ на текущем и следующем тактах: $x_4$ и $\tilde{x}_4$,~--- а также учитывает знание количества требований,  находившихся и пришедших в очередь $O_1$. Множество ${\mathbb A}_{\mathrm{trans}}^1(x,  \tilde{x},  \tilde{k},  \tilde{r})$ учитывает изменение количества требований в очереди $O_1$: $x_1$ и $\tilde{x}_1$. И наконец,   множество 
 ${\mathbb A}_{\mathrm{trans}}^2(x,  \tilde{x},  \tilde{k},  \tilde{r})$ контролирует изменение количества требований $x_2$ и $\tilde{x}_2$ в очереди $O_2$ на последовательных тактах функционирования системы.
 \begin{theorem}
 Пусть $x$,   $\tilde{x}\in \mathbb{Z}_+^4$ и $\Gamma^{(k,  r)}$,   $\Gamma^{(\tilde{k},  \tilde{r})}=h(\Gamma^{(k,  r)},  x_3) \in \Gamma$. Тогда переходные вероятности однородной счетной марковской цепи $\Mark$ вычисляются по следующей формуле:
@@ -204,11 +204,11 @@ $$
 \end{proof}
 
 
-\section[Классификация состояний кибернетической системы как марковской цепи]%
-{Классификация состояний кибернетической системы как марковской цепи}
+\section[Классификация состояний управляющей системы Ляпунова--Яблонского как марковской цепи]%
+{Классификация состояний управляющей системы Ляпунова--Яблонского  как марковской цепи}
 % \section[Классификация состояний по арифметическим свойствам переходных вероятностей марковской цепи ${\Mark}$]%
 % {Классификация состояний по арифметическим \\ свойствам переходных вероятностей марковской цепи\\ $\boldsymbol{\Mark}$}
-Теперь найдем множество существенных состояний марковской цепи $\Mark$,  которая описывает динамику исследуемой в работе кибернетической системы. Мы последовательно рассмотрим состояния разного вида и определим сообщающиеся подклассы. 
+Теперь найдем множество существенных состояний марковской цепи $\Mark$,  которая описывает динамику исследуемой в работе управляющей системы. Мы последовательно рассмотрим состояния разного вида и определим сообщающиеся подклассы. 
 % Для этого введем множество 
 % \begin{equation*}
 % {\mathbb X}^{(k, r)} = \{x = (x_1, x_2, x_3, x_4) \in \mathbb{Z}_+^4 \colon (x_1 > 0) \Rightarrow (x_4 \geqslant \ell(k, r, 1))\}, 
@@ -1162,11 +1162,11 @@ $(\Gamma^{(\tilde{k}, \tilde{r})}, \tilde{x})$,
  \label{important:states:basic}
 \end{theorem}
 \begin{proof}
-Существенность состояний уже доказана,  поэтому осталось доказать отсутствие других существенных состояний.
+Существенность состояний уже доказана в леммах~\ref{first:lemma}--\ref{last:lemma}, поэтому осталось доказать отсутствие других существенных состояний.
 
 Покажем сначала,  что состояния $(\Gamma^{(k, r)}, x)$,  $\Gamma^{(k, r)}\in \Gamma$,  $x\in Z^4_+$,  для которых 
 \begin{equation*}
-    x_1>0,  \quad x_4 < \ell(k, r, 1), 
+    \ell(k, r, 1) > 0, \quad x_1>0,  \quad x_4 < \ell(k, r, 1), 
 \end{equation*}
 являются несущественными. Действительно,  пусть $\varkappa_{1, i+1}=x_1 > 0$,  тогда из равенства \eqref{queuesFunc} следует
 \begin{multline*}
@@ -1192,8 +1192,8 @@ $(\Gamma^{(\tilde{k}, \tilde{r})}, \tilde{x})$,
     \varkappa_{3, i+r} \geqslant \varkappa_{3,  i+r-1} - \xi_{3,  i+r-1} \geqslant \varkappa_{3,  i+r-2} - \xi_{3,  i+r-1}- \xi_{3,  i+r-2} \geqslant \varkappa_{3,  i} - \sum_{s=1}^r \ell(k,  s,  3).
 \end{equation*}
 То есть $\varkappa_{3,  i} < L + 1$. То есть при переходе от шага $i$ к шагу  $i+1$ количество требований в очереди $O_3$ не превышает порога $L$ и должно включиться состояние продления. Однако мы исходили из предположения,  что следующие $r$ состояний соответствуют циклу с номером $k$. Приходим к противоречию и,  следовательно,  прийти в состояние c $x_3< L + 1 - \sum_{s=1}^r \ell(k,  s,  3)$ невозможно.
-
 \end{proof}
+
 Пусть
 \begin{align*}
   S^3_{0, r} = & 
