--- a/Dissertation/Work_structured/Dissertation/part3.tex
+++ b/Dissertation/Work_structured/Dissertation/part3.tex
@@ -1,7 +1,7 @@
 \chapter{Анализ первичных и промежуточной очередей системы}	
 
 В главе~3 более подробно изучаются случайные последовательности,  содержащие состояния только части очередей из последовательности $\Mark$: очереди $O_1$,  $O_3$ и $O_4$. Исключение из рассмотрения нескольких компонент пятмерной марковской цепи позволяет найти достаточное,  а в некоторых случаях  необходимое условия существования стационарного распределения. Для нахождения условий стационарности используется хорошо зарекомендовавший себя в схожих задачах итеративно-мажорантный метод,  в котором последовательность математических ожиданий компонент цепи ограничивается числовой последовательностью более простого вида.
-Ограниченность математических ожиданий,  в следствие особенностей цепи,  влечет существование стационарного распределения.
+Ограниченность математических ожиданий,  вследствие особенностей цепи,  влечет существование стационарного распределения.
 
 \section{Условия ограниченности очереди $O_4$ потока $\Pi_4$}
 \begin{theorem}
@@ -81,7 +81,7 @@ $$
 \end{proof}
 
 
-\section[Рекуррентные соотношения для производящих функций последовательности\\ ${\MarkThree}$]%
+\section[Рекуррентные соотношения для производящих функций последовательности ${\MarkThree}$]%
 {Рекуррентные соотношения для производящих \\ функций последовательности  $\boldsymbol{\MarkThree}$}
 Пусть $\Gamma^{(k, r)}\in \Gamma$ и $x_3 \in {\mathbb Z}_+$. Обозначим 
 \begin{equation*}
