--- a/Dissertation/Work_structured/Dissertation/part4.tex
+++ b/Dissertation/Work_structured/Dissertation/part4.tex
@@ -12,7 +12,7 @@
 
 % На базе математической модели тандема управляющих систем обслуживания построена имитационная модель для двух перекрестков (рис.~\ref{../Pictures/Crossroads.png}).
 
-Математическая модель рассматриваемой в работе управляющей системы, построенная по принципам кибернетического подхода, существенно упростила построение и реализацию имитационной модели тандема перекрестков (рис.~\ref{crossroads}). В частности, нелокальное описание блоков системы помогло избежать формирования большого количества данных и, как следствие, их последующей обработки. Время имитации при этом должно существенно сократиться. Для смещенной и несмещенной систем в роли состояния выступали длины очередей и состояние обслуживающего устройства. В соответствии с законами распределения входных потоков  $\Pi_1$ и $\Pi_3$ генерировались требования системы. Для каждого требования фиксировался момент его прихода в систему, выхода из нее и время до обслуживания.
+Математическая модель рассматриваемой в работе абстрактной управляющей системы Ляпунова--Яблонского, построенная по принципам кибернетического подхода, существенно упростила построение и реализацию имитационной модели тандема перекрестков (рис.~\ref{crossroads}). В частности, нелокальное описание блоков системы помогло избежать формирования большого количества данных и, как следствие, их последующей обработки. Время имитации при этом должно существенно сократиться. Для смещенной и несмещенной систем в роли состояния выступали длины очередей и состояние обслуживающего устройства. В соответствии с законами распределения входных потоков  $\Pi_1$ и $\Pi_3$ генерировались требования системы. Для каждого требования фиксировался момент его прихода в систему, выхода из нее и время до обслуживания.
 
 Альтернативным подходом к изложенному в этой работе является метод дискретных событий, подробно описанный в работах  \cite{AsmussenGlynn,Simulation} и использовавшийся, например, в работах \cite{FedotkinRachinskaya:2016,FedotkinADissertation}. В противовес нелокальному описанию системы, в роли наблюдаемых событий, как правило, выбирались вход в систему или выход из нее конкретного требования, момент смены обслуживающим устройством его состояния и т.д. В результате формируется исчерпывающее множество событий системы и создается полное описание всего процесса обслуживания. Поскольку для получения оценки основных характеристик работы системы такой объем информации является избыточным, то представляется целесообразным и зачастую необходимым отказаться от большей ее части.
 
