--- a/Dissertation/Work_structured/biblio/othercites.bib
+++ b/Dissertation/Work_structured/biblio/othercites.bib
@@ -40,6 +40,7 @@
 	numpages = {400},
 	language = {russian}
 }
+
 @BOOK{Gnedenko,
 	author = {Гнеденко, Б.В.},
 	title = {Курс теории вероятностей},
@@ -50,6 +51,77 @@
 	language = {russian}
 }
 
+@BOOK{Taha,
+	author = {Таха, Х.А.},
+	title = {Введение в исследование операций},
+	edition = {7-е изд.},
+	address = {М.},
+	publisher = {Вильямс},
+	year = {2005},
+	numpages = {901},
+	language = {russian}
+}
+
+@BOOK{Carter,
+	author = {Carter M.W., Price C.C. },
+	title = {Operations research: a practical introduction},
+	address = {Boca Raton},
+	publisher = {CRC Press},
+	year = {2001},
+	numpages = {416},
+	language = {english}
+}
+%Hamdy A. Taha is a University Professor of Industrial Engineering with the University of Arkansas, where he teaches and conducts research in operations research and simulation. He is the author of three other books on integer programming and simulation, and his works have been translated into Chinese, Korean, Spanish, Japanese, Russian, Turkish, and Indonesian. He is also the author of several book chapters. His articles have appeared in Management Science, Operations Research, and Interfaces Institute for Operations Research and Management Science, Naval Research Logistics John Wiley & Sons, the European Journal of Operations Research International Federation of Operations Research Societies and the AIIE Transactions. Professor Taha was named a Senior Fulbright Scholar to Carlos III University, Madrid, Spain. He received an Alumni Award for excellence in research and The Nadine Baum Faculty Teaching Award, both from the University of Arkansas, and numerous other research and teaching awards from the College of Engineering, University of Arkansas. He is fluent in three languages and has held positions in Mexico and the Middle East.
+
+@BOOK{Murthy,
+	author = {Murthy R.P.},
+	title = {Operations research},
+	publisher = {New Age International Publishers},
+	year = {2007},
+	numpages = {705},
+	language = {english}
+}
+
+@BOOK{Hillier,
+	author = {Hillier F.S., Lieberman G.J.},
+	edition = {9th ed.},
+	title = {Introduction to operations research},
+	publisher = {McGraw-Hill},
+	year = {2010},
+	numpages = {1047},
+	language = {english}
+}
+%Hiller and Lieberman bio see in their book
+
+@BOOK{Encylc,
+	author = {Gass S. I., M. C. Fu},
+	edition = {3rd ed.},
+	title = {Encyclopedia of operations research and management science},
+	publisher = {Springer},
+	year = {2013},
+	numpages = {1641},
+	language = {english}
+}
+
+@BOOK{Ventcel,
+	author = {Вентцель Е.С.},
+	title = {Исследование операций. Задачи, принципы, методология },
+	address = {М.},
+	publisher = {Наука},
+	year = {1988},
+	numpages = {208},
+	language = {russian}
+}
+
+@BOOK{Eltarenko,
+	author = {Елтаренко Е.А.},
+	title = {Исследование операций (системы массового обслуживания, теория игр, модели управления запасами) },
+	address = {М.},
+	publisher = {МИФИ},
+	year = {2007},
+	numpages = {157},
+	language = {russian}
+}
 
 @BOOK{KoksSmith,
   author = {Кокс, Д.Р. and Смит, У.Л.},
@@ -315,6 +387,7 @@ pages = {78--119},
    language = {english}
 }
 
+
 @ARTICLE{Neimark:1966,
   author = {Неймарк, Ю. И. and Федоткин, М. А.},
   title = {О работе автомата, регулирующего уличное движение на перекрестке},
@@ -324,6 +397,16 @@ pages = {78--119},
   number = {3},
   pages = {78--87},
    language = {russian}
+}
+
+@ARTICLE{Neimark:1985,
+  author = {Неймарк, Ю. И. and Шварц Я.Л.},
+  title = {Управление движением на транспортном узле с упреждающей информацией о потоках автомашин},
+  journal = {Автоматика и телемеханика},
+  number = {3},
+  year = {1985},
+  pages = {89--97},
+  language = {russian}
 }
 
 @ARTICLE{Neimark:1968,
@@ -607,9 +690,6 @@ volume = {12},
    language = {russian}
 }
 
-
-
-
 @ARTICLE{Fedotkin:1969,
   author = {Федоткин, М. А.},
   title = {Управление уличным движением на перекрестке автоматом с фикcированным ритмом переключения при периодическом случайном потоке прибывающих машин},
@@ -632,15 +712,13 @@ volume = {12},
 
 @ARTICLE{Fedotkin:2014,
   author = {Федоткин, А. М. and Голышева, Н. М. and Сутягина, Н. И.},
-  title = {Циклическое управление конфликтными потоками Гнеденко-Коваленко},
+  title = {Циклическое управление конфликтными потоками Гнеденко--Коваленко},
   journal = {Вестник Нижегородского университета им. Н.И. Лобачевского},
   year = {2014},
   number = {4(1)},
   pages = {382--387},
    language = {russian}
 }
-
-
 
 @ARTICLE{Kuvykina:1990,
   author = {Кувыкина, Е. В.},
@@ -671,10 +749,6 @@ volume = {12},
   pages = {67--76},
    language = {russian}
 }
-
-
-
-
 
 @ARTICLE{Kabanov:74,
   author = {Кабанов, Ю. М. and Липцер, Р.Ш.},
@@ -780,7 +854,6 @@ number = {4},
   language = {english}
 }
 
-
 @ARTICLE{Yamada,
   author = {Yamada, K. and Lam, T.N.},
   title = {Simulation analysis of two adjacent traffic signals },
@@ -791,7 +864,6 @@ number = {4},
   pages = {454--464},
   language = {english}
 }
-
 
 @ARTICLE{Lyapunov,
   author = {Ляпунов, А. А. and Яблонский, С. В.},
