--- a/Dissertation/Work_structured/common/characteristic.tex
+++ b/Dissertation/Work_structured/common/characteristic.tex
@@ -12,13 +12,17 @@
 
 {\novelty} Основные результаты являются новыми и состоят в следующем:
 
-1. Построена строгая вероятностная модель тандема управляющих систем с немгновенным перемещением требований между ними, управление в которых осуществляется по циклическому алгоритму и алгоритму с продлением. 
+1. Впервые построена вероятностная модель тандема управляющих систем с немгновенным перемещением требований между ними, управление в которых осуществляется по циклическому алгоритму и алгоритму с продлением. В этой модели требования сначала поступают в первую систему на обслуживание по циклическому алгоритму, а затем немгновенно поступают во вторую систему на обслуживание по циклическому алгоритму с продлением. Немгновенность перемещения моделируется при помощи биномиальной случайной величины с параметром $p$, имеющим смысл вероятности перехода требования из одной системы в другую за определенный промежуток времени.
+%Построена строгая вероятностная модель тандема управляющих систем с немгновенным перемещением требований между ними, управление в которых осуществляется по циклическому алгоритму и алгоритму с продлением. 
 
-2. Изучены эргодические свойства построенной модели, найдены условия существования стационарного режима для очередей первичных требований, а также для промежуточной очереди.
+2. Впервые применен аппарат абстрактных управляющих систем Ляпунова--Яблонского для изучения указанной выше системы. Построенная по принципам кибернетического подхода вероятностная модель позволила провести разносторонний анализ системы. В частности, была проведена классификация состояний марковской цепи, описывающей динамику системы, найдены рекуррентные соотношения для соответствующих производящих функций и были изучены эргодические свойства системы. Также, благодаря этому подходу, была построена и реализована имитационная модель для численного анализа системы.
+%Изучены эргодические свойства построенной модели, найдены условия существования стационарного режима для очередей первичных требований, а также для промежуточной очереди.
 
-3. Разработана и реализована имитационная модель для тандема
+3. Впервые применен итеративно-мажорантный метод для нахождения достаточных условий существования стационарного распределения в указанной выше модели. Благодаря итеративно-мажорантному методу были найдены условия существования стационарного режима для очередей первичных требований, а также для промежуточной очереди.
 
-4. Проведено исследование вероятностной и имитационной моделей, и определена расширенная область стационарности системы при алгоритме с продлением.
+%3. Разработана и реализована имитационная модель для тандема
+
+%4. Проведено исследование вероятностной и имитационной моделей, и определена расширенная область стационарности системы при алгоритме с продлением.
 
 
 
@@ -32,7 +36,7 @@
 
 
 
-{\methods} Методология диссертационной работы базируется на представлении стохастических систем массового обслуживания в виде кибернетических управляющих систем. Применение принципов кибернетического подхода позволяет выделить в изучаемых системах ключевые блоки, структурировать информацию о законах функционирования блоков и основных связях между ними. Для описания входных потоков был примен метод нелокального описания, что сделало возможным более глубокое математическое изучение рассматриваемых объектов. В работе используется аппарат теории вероятностей, теории массового обслуживания, исследования операций, теории управляемых марковских процессов, теории функций комплексного переменного. Также применяются методы математической статистики, матричных вычислений и теории систем линейных алгебраических уравнений. При разработке имитационных моделей использовался язык программирования C++. Для визуализации результатов некоторых численных исследований использовался язык Python.
+{\methods} Методология диссертационной работы базируется на представлении стохастических систем массового обслуживания в виде абстрактных управляющих систем Ляпунова--Яблонского. Применение аппарата управляющих систем позволяет выделить в изучаемых системах ключевые блоки, структурировать информацию о законах функционирования блоков и основных связях между ними. Для описания входных потоков был примен метод нелокального описания, что сделало возможным более глубокое математическое изучение рассматриваемых объектов. В работе используется аппарат теории вероятностей, теории массового обслуживания, исследования операций, теории управляемых марковских процессов, теории функций комплексного переменного. Также применяются методы математической статистики, матричных вычислений и теории систем линейных алгебраических уравнений. При разработке имитационных моделей использовался язык программирования C++. Для визуализации результатов некоторых численных исследований использовался язык Python.
 
 
 {\defpositions}
@@ -41,7 +45,7 @@
 
 2. Методика нахождения условий существования стационарного режима в системах управления потоками неоднородных требований с циклическим алгоритмом и алгоритмом с продлением.
 
-3. Метод определения момента достижения управляемой системой обслуживания квазистационарного режима.
+3. Методика определения момента достижения управляемой системой обслуживания квазистационарного режима.
 
 
 
@@ -59,11 +63,17 @@
 \item XVI Международная конференция имени А.Ф. Терпугова <<Информационные технологии и математическое моделирование>> ИТММ-2017 (Казань, 2017 г.).
 \item  20-я международная научная конференция <<Распределенные компьютерные и телекоммуникационные сети: управление, вычисление, связь>> DCCN-2017 (Москва, 2017 г.).
 \item IX Московская международная конференция по исследованию операций (Москва, 2018~г.).
+\item Четвертая международная конференция по стохастическим методам МКСМ-4 (пос.~Дивноморское, г.~Новороссийск).
+\item XVIII Международная конференция имени А.Ф.~Терпугова <<Информационные технологии и математическое моделирование>> ИТММ-2019 (Саратов, 2019 г.).
 \end{enumerate}
 
 
 {\contribution} В совместных публикациях научному руководителю принадлежит постановка задачи и общее редактирование работ. Все исследования выполнены автором диссертации лично, все полученные результаты принадлежат автору. 
 
+{\passport} Диссертационная работа выполнена в соответствии с паспортом специальности 01.01.09 «Дискретная математика и математическая кибернетика» и включает оригинальные результаты в области дискретной математики и математической кибернетики. 
+
+Исследование, приведенное в работе, соответствует следующим
+разделам паспорта специальности. Пункт~4 (Математическая теория исследования операций и теория игр): построена и изучена математическая модель для новой системы массового обслуживания методами теории исследования операций. Пункт~2 (Теория управляющих систем): математическая модель исследуемой системы представлена в виде абстрактной управляющей системы Ляпунова--Яблонского и построена на базе принципов кибернетического подхода.
 
 \ifnumequal{\value{bibliosel}}{0}{% Встроенная реализация с загрузкой файла через движок bibtex8
     \publications\ Основные результаты по теме диссертации изложены в XX печатных изданиях, 
