--- a/Dissertation/Work_structured/common/newnames.tex
+++ b/Dissertation/Work_structured/common/newnames.tex
@@ -25,6 +25,7 @@
 \newcommand{\probationTXT}{Степень достоверности и апробация результатов.}
 
 \newcommand{\contributionTXT}{Личный вклад автора.}
+\newcommand{\passport}{\textbf{Соответствие паспорту специальности.}}
 \newcommand{\publicationsTXT}{Публикации.}
 
 
