--- a/Dissertation/Work_structured/Dissertation/part1.tex
+++ b/Dissertation/Work_structured/Dissertation/part1.tex
@@ -22,7 +22,7 @@ f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z^{\nu},  \quad j\in \{1, 3\}.
 \end{equation}
 Функцию $f_j(\cdot)$,  $j\in \{1, 3\}$,  будем предполагать аналитической при всех $z\in \mathbb{C}$ таких,  что $|z|\hm<(1+\varepsilon)$,  $\varepsilon>0$. Величина $p_{\nu}^{(j)}$ задает  вероятность того,  что по потоку $\Pi_j$ число требований в группе равно $\nu$. После обслуживания требования потока $\Pi_1$ повторно поступают в систему для обслуживания,  формируя при этом поток $\Pi_4$. Затем,  обслуженные требования потока $\Pi_4$ поступают на еще одно повторное обслуживание,  создавая при этом поток $\Pi_2$. Потоки $\Pi_2$ и $\Pi_3$ являются конфликтными,  что означает запрет на одновременное обслуживание требований этих потоков и,  следовательно,  исследование системы не может быть сведено к задаче с меньшим числом потоков. 
 
-Обслуживающее устройство в каждый момент времени может находиться в одном из множества состояний $\Gamma=\{\Gamma^{(k, r)} \colon k=\overline{0, d}; r=\overline{1, n_k}\}$ с заданными натуральными числами $d$,  $n_0$,  $n_1$,  $\ldots$,  $n_d$. В каждом состоянии $\Gamma^{(k, r)}$ обслуживающее устройство находится в течение времени $T^{(k, r)}$. Введем множества $\Gamma^{\mathrm{I}}$,  $\Gamma^{\mathrm{II}}$, 
+Обслуживающее устройство в каждый момент времени может находиться в одном из множества состояний $\Gamma=\{\Gamma^{(k, r)} \colon k=\overline{0, d}; r=\overline{1, n_k}\}$ с заданными натуральными числами $d$,  $n_0$,  $n_1$,  $\ldots$,  $n_d$. В каждом состоянии $\Gamma^{(k, r)}$ обслуживающее устройство находится в течение времени $T^{(k, r)}$. Выделим из множества $\Gamma$ подножества $\Gamma^{\mathrm{I}}$,  $\Gamma^{\mathrm{II}}$, 
 $\Gamma^{\mathrm{III}}$ и $\Gamma^{\mathrm{IV}}$ следующим образом. В состоянии $\gamma \in \Gamma^{\mathrm{I}}$ обслуживаются только требования из очередей $O_1$,  $O_2$ и $O_4$.
 В состоянии $\gamma \in \Gamma^{\mathrm{II}}$ обслуживаются только требования из очередей $O_2$ и $O_4$.
 В состоянии $\gamma \in \Gamma^{\mathrm{III}}$ обслуживаются только требования из очередей $O_1$,  $O_3$ и $O_4$.
@@ -54,10 +54,9 @@ h_3(r), & \quad \text{если } k=0 \text{ и } y > L.
 \label{hLaw}
 \end{equation}
 
-Рассмотрим введеные обозначения на примере рис.~\ref{GraphScheme}. Входными состояниями обслуживающего устройства являются $\Gamma^{(1, 1)} \in C_1^{\mathrm{I}}$,  $\Gamma^{(2, 1)} \in C_2^{\mathrm{I}}$,  $\Gamma^{(3, 1)} \in C_3^{\mathrm{I}}$ и $\Gamma^{(4, 1)} \in C_4^{\mathrm{I}}$,  выходные состояния~--- $\Gamma^{(1, 4)} \in C_1^{\mathrm{O}}$,  $\Gamma^{(2, 2)} \in C_2^{\mathrm{O}}$,  $\Gamma^{(3, 4)} \in C_3^{\mathrm{O}}$ и $\Gamma^{(4, 2)} \in C_4^{\mathrm{O}}$,  нейтральные состояния~--- $\Gamma^{(1, 2)},  \Gamma^{(1, 3)} \in C_1^{\mathrm{N}}$ и $\Gamma^{(3, 2)},  \Gamma^{(3, 3)} \in C_3^{\mathrm{N}}$. Состояния продления на графе представлены вершинами $\Gamma^{(0, 1)}$,  $\Gamma^{(0, 2)}$,  $\Gamma^{(0, 3)}$ и $\Gamma^{(0, 4)}$. Далее,  отображение $h_1(\cdot)$ на графе задано таким образом,  что оно переводит,  например,  выходное состояние $\Gamma^{(1, 4)}$ в число $1$~--- номер состояния продления $\Gamma^{(0, 1)}$,  то есть $h_1(\Gamma^{(1, 4)})=1$. Аналогично,  например,  $h_2(1)=2$ и $h_2(3)=4$. Примером отображения $h_3(\cdot)$ является $h_3(2)=\Gamma^{(3, 1)}$.
+Рассмотрим введеные обозначения для входных, выходных и нейтральных состояний на примере рис.~\ref{GraphScheme}. Входными состояниями обслуживающего устройства являются $\Gamma^{(1, 1)} \in C_1^{\mathrm{I}}$,  $\Gamma^{(2, 1)} \in C_2^{\mathrm{I}}$,  $\Gamma^{(3, 1)} \in C_3^{\mathrm{I}}$ и $\Gamma^{(4, 1)} \in C_4^{\mathrm{I}}$,  выходные состояния~--- $\Gamma^{(1, 4)} \in C_1^{\mathrm{O}}$,  $\Gamma^{(2, 2)} \in C_2^{\mathrm{O}}$,  $\Gamma^{(3, 4)} \in C_3^{\mathrm{O}}$ и $\Gamma^{(4, 2)} \in C_4^{\mathrm{O}}$,  нейтральные состояния~--- $\Gamma^{(1, 2)},  \Gamma^{(1, 3)} \in C_1^{\mathrm{N}}$ и $\Gamma^{(3, 2)},  \Gamma^{(3, 3)} \in C_3^{\mathrm{N}}$. Состояния продления на графе представлены вершинами $\Gamma^{(0, 1)}$,  $\Gamma^{(0, 2)}$,  $\Gamma^{(0, 3)}$ и $\Gamma^{(0, 4)}$. Далее,  отображение $h_1(\cdot)$ на графе задано таким образом,  что оно переводит,  например,  выходное состояние $\Gamma^{(1, 4)}$ в число $1$~--- номер состояния продления $\Gamma^{(0, 1)}$,  то есть $h_1(\Gamma^{(1, 4)})=1$. Аналогично,  например,  $h_2(1)=2$ и $h_2(3)=4$. Примером отображения $h_3(\cdot)$ является $h_3(2)=\Gamma^{(3, 1)}$.
 
-
-Предполагается,  что длительности обслуживания различных требований могут  иметь различные законы распределения и,  вообще говоря,  быть зависимыми,  поэтому вместо привычного способа,  состоящего в указании функции распределения длительности обслуживания произвольного требования,  будут использованы потоки насыщения. Потоками насыщения $\Pi^{\mathrm{\text{нас}}}_j$,  $j=\overline{1, 4}$,  назовем виртуальные выходные потоки при условии максимального использования ресурсов обслуживающего устройства,  а для $j=\overline{1, 3}$ еще и при условии максимальной загрузки соответствующих очередей.
+Предполагается,  что длительности обслуживания различных требований могут  иметь различные законы распределения и, вообще говоря,  быть зависимыми,  поэтому вместо привычного способа,  состоящего в указании функции распределения длительности обслуживания произвольного требования,  будут использованы потоки насыщения. Потоками насыщения $\Pi^{\mathrm{\text{нас}}}_j$,  $j=\overline{1, 4}$,  назовем виртуальные выходные потоки при условии максимального использования ресурсов обслуживающего устройства,  а для $j=\overline{1, 3}$ еще и при условии максимальной загрузки соответствующих очередей.
 Более конкретно,  поток насыщения $\Pi^{\mathrm{\text{нас}}}_j$,  $j=\overline{1, 3}$,  содержит неслучайное число $\ell(k, r, j)$ требований,  которые были обслужены в течение времени $T^{(k, r)}$,  если обслуживающее устройство находилось в состоянии $\Gamma^{(k, r)}$. Пусть $\mathbb{Z}_+$~--- множество целых неотрицательных чисел. Тогда,  при условии,  что в очереди $O_4$ находится $x \in \mathbb{Z}_+$ требований,  поток насыщения $\Pi^{\mathrm{\text{нас}}}_4$ определим как поток,  содержащий все $x$ требований.
 %\subsection{Пример: тандем из двух перекрестков} 
 Наконец,  при состоянии обслуживающего устройства $\Gamma^{(k, r)}$ каждое требование из очереди $O_4$ с вероятностью $p_{k, r}$ и независимо от других завершает обслуживание и отправляется в очередь $O_2$ потока~$\Pi_2$. С вероятностью $1-p_{k, r}$ требование очереди $O_4$ остается в ней до следующего такта. На следующем такте процесс повторяется.
@@ -105,8 +104,8 @@ h_3(1)=\Gamma^{(2, 1)},  \quad h_3(2)=\Gamma^{(3, 1)},  \quad h_3(3)=\Gamma^{(4,
 \end{equation*}
 Этим завершается построение числового примера.
 
-\section{Представление рассматриваемой системы обслуживания в виде кибернетической управляющей системы}
-Описанная в предыдущем разделе на содержательном уровне система массового обслуживания должна рассматриваться как кибернетическая управляющая система обслуживания (см. \cite{Zorin:2011:2}). Схема управляющей системы представлена на рис. \ref{SystemScheme}. Схема состоит из следующих блоков: 1)~входные полюса первого типа~--- входные потоки $\Pi_1$,  $\Pi_2$,  $\Pi_3$,  $\Pi_4$; 2)~входные полюса второго типа~--- потоки насыщения $\Pi_1^{\mathrm{\text{нас}}}$,  $\Pi_2^{\mathrm{\text{нас}}}$,  $\Pi_3^{\mathrm{\text{нас}}}$,  $\Pi_4^{\mathrm{\text{нас}}}$; 3)~выходные полюса $\Pi_1^{\mathrm{\text{вых}}}$,  $\Pi_2^{\mathrm{\text{вых}}}$,  $\Pi_3^{\mathrm{\text{вых}}}$,  $\Pi_4^{\mathrm{\text{вых}}}$; 4)~внутренняя память~--- обслуживающее устройство (ОУ);  5)~устройство по переработке информации внутренней памяти~--- граф смены состояний;  6)~внешняя память~--- очереди $O_1$,  $O_2$,  $O_3$,  $O_4$; 7)~устройство по переработкe информации внешней памяти~--- устройства по поддержанию дисциплины очереди $\delta_1$,  $\delta_2$,  $\delta_3$,  $\delta_4$; 8) внешняя среда с одним состоянием. Координатой блока является номер этого блока на схеме.
+\section{Представление рассматриваемой системы обслуживания в виде абстрактной управляющей системы Ляпунова--Яблонского}
+Описанная в предыдущем разделе на содержательном уровне система массового обслуживания должна рассматриваться как абстрактная управляющая система обслуживания (см. \cite{Zorin:2011:2}). Схема управляющей системы представлена на рис. \ref{SystemScheme}. Схема состоит из следующих блоков: 1)~входные полюса первого типа~--- входные потоки $\Pi_1$,  $\Pi_2$,  $\Pi_3$,  $\Pi_4$; 2)~входные полюса второго типа~--- потоки насыщения $\Pi_1^{\mathrm{\text{нас}}}$,  $\Pi_2^{\mathrm{\text{нас}}}$,  $\Pi_3^{\mathrm{\text{нас}}}$,  $\Pi_4^{\mathrm{\text{нас}}}$; 3)~выходные полюса $\Pi_1^{\mathrm{\text{вых}}}$,  $\Pi_2^{\mathrm{\text{вых}}}$,  $\Pi_3^{\mathrm{\text{вых}}}$,  $\Pi_4^{\mathrm{\text{вых}}}$; 4)~внутренняя память~--- обслуживающее устройство (ОУ);  5)~устройство по переработке информации внутренней памяти~--- граф смены состояний;  6)~внешняя память~--- очереди $O_1$,  $O_2$,  $O_3$,  $O_4$; 7)~устройство по переработкe информации внешней памяти~--- устройства по поддержанию дисциплины очереди $\delta_1$,  $\delta_2$,  $\delta_3$,  $\delta_4$; 8) внешняя среда с одним состоянием. Координатой блока является номер этого блока на схеме.
 
 Зададим информацию о блоках с помощью следующих случайных величин и элементов,  указав,  в том числе,  множества их возможных значений. В качестве дискретной временной шкалы выберем последовательность $\tau_0=0$,  $\tau_1$,  $\tau_2$,  $\ldots$ моментов смены состояния обслуживающего устройства. Обозначим:
 \begin{itemize}
