--- a/Dissertation/Work_structured/common/data.tex
+++ b/Dissertation/Work_structured/common/data.tex
@@ -13,7 +13,8 @@
 \newcommand{\thesisUdk}                % Диссертация, УДК
 {\todo{519.872}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{\todo{\MakeUppercase{Моделирование и анализ тандема систем массового обслуживания с циклическим управлением с продлением}}}{Моделирование и анализ тандема систем массового обслуживания с циклическим управлением с продлением}}
+{\texorpdfstring{\todo{\MakeUppercase{
+Исследование операции обслуживания конфликтных потоков в тандеме с задержкой по циклическому алгоритму с продлением}}}{Исследование операции обслуживания конфликтных потоков в тандеме с задержкой по циклическому алгоритму с продлением}}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
 {\texorpdfstring{\todo{01.01.09}}{01.01.09}}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название
@@ -58,7 +59,7 @@
 %{\todo{профессор кафедры прикладной математики и компьютерного моделирования факультета автоматики и вычислительной техники}}
 
 \newcommand{\opponentOneFio}           % Оппонент 1, ФИО
-{\todo{Ушаков Владимир Георгиевич}}
+{\todo{Оппонент Оппонентович Оппонентов1}}
 \newcommand{\opponentOneRegalia}       % Оппонент 1, регалии
 {\todo{доктор физико-математических наук, профессор}}
 \newcommand{\opponentOneJobPlace}      % Оппонент 1, место работы
@@ -68,7 +69,7 @@
 {\todo{профессор кафедры математической статистики факультета вычислительной математики и кибернетики}}
 
 \newcommand{\opponentTwoFio}           % Оппонент 2, ФИО
-{\todo{Федосенко Юрий Семенович}}
+{\todo{Оппонент Оппонентович Оппонентов2}}
 \newcommand{\opponentTwoRegalia}       % Оппонент 2, регалии
 {\todo{доктор технических наук, профессор}}
 \newcommand{\opponentTwoJobPlace}      % Оппонент 2, место работы
@@ -82,7 +83,7 @@
 {\todo{Кафедра прикладной информатики и теории вероятностей факультета физико-математических и естественных наук ФГАОУ ВО <<Российский университет дружбы народов>>}}
 
 \newcommand{\defenseDate}              % Защита, дата
-{\todo{04 октября 2018~г.~в~14:40 часов}}
+{\todo{20 апреля  2019~г.~в~14:40 часов}}
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
 {\todo{Д\,212.166.20}}
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
