Before last modifications took place

--- a/Dissertation/Work_structured/Dissertation/part2.tex
+++ b/Dissertation/Work_structured/Dissertation/part2.tex
@@ -1209,7 +1209,7 @@ $(\Gamma^{(\tilde{k}, \tilde{r})}, \tilde{x})$,
   \quad 1 \leqslant k \leqslant d,  \quad 1 \leqslant r \leqslant n_k.
 \end{align*}
 
-Из доказанных лемм~\ref{first:lemma}--\ref{last:lemma} таке следует другая теорема.
+Из доказанных лемм~\ref{first:lemma}--\ref{last:lemma} также следует другая теорема.
 \begin{theorem}
 Множество существенных состояний марковской цепи $\MarkThree$ имеет вид $\raisebox{-.5ex}{$\Bigl($}\bigcup\limits_{1 \leqslant r \leqslant n_0}S^3_{0, r}\raisebox{-.5ex}{$\Bigr)$}\cup \raisebox{-.5ex}{$\Bigl($}\bigcup\limits_{\substack{1 \leqslant k \leqslant d\\ 1 \leqslant r \leqslant n_k}} S^3_{k, r}\raisebox{-.5ex}{$\Bigr)$}$.
 \end{theorem}
