--- a/Dissertation/Work_structured/Dissertation/part4.tex
+++ b/Dissertation/Work_structured/Dissertation/part4.tex
@@ -3,7 +3,7 @@
 % \setcounter{chapter}{4}
 % \setcounter{section}{0}
 
-Глава~4 имеет своей целью как подтвердить результаты, полученные аналитически в предыдущих главах, так и расширить их. С этой целью была разработана имитационная модель и написана программа для ее исследования. Для определения момента достижения системой стационарного режима подсчитываются различные статистики одновременно для двух систем: смещенной, то есть системы с ненулевым количеством требований в начале, и несмещенной, то есть системы с пустыми очередями при старте. Основным показателем качества работы системы выбрана средневзвешенная оценка времени пребывания требования в системе. В завершении главы приведены конкретные эксперименты и анализ их результатов.
+Глава~4 имеет своей целью проанализировать и расширить результаты, полученные аналитически в предыдущих главах. С этой целью была разработана имитационная модель и написана программа для ее исследования. Для определения момента достижения системой стационарного режима подсчитываются различные статистики одновременно для двух систем: смещенной, то есть системы с ненулевым количеством требований в начале, и несмещенной, то есть системы с пустыми очередями при старте. Основным показателем качества работы системы выбрана средневзвешенная оценка времени пребывания требования в системе. В завершении главы приведены конкретные эксперименты и анализ их результатов.
 
 \section{Описание имитационной модели}
 Комплексные системы, состоящие из нескольких схожих или различных подсистем, могут рассматриваться с точки зрения понятия <<сложная система>>. Общее определение <<сложной системы>> было введено в работе \cite{Buslenko:1978} на основе изучения большого количества реальных комплексных систем и их математических моделей. Для анализа подобных систем ранее использовался весьма широкий математический аппарат: конечные автоматы, дифференциальные уравнения, динамические системы и теория массового обслуживания. Поэтому введение единого общего понятия представлялось актуальным и было осуществлено именно в работе \cite{Buslenko:1978}. Тандем управляющих систем обслуживания является одним из примеров таких <<сложных систем>>. 
